# tracer-backend

./: README.md  dev.ps1  docker-compose.yml  init_dev.sql  pyproject.toml
.github/workflows/: ci.yml  semgrep.yml
accounts/: authentication.py  exceptions.py  hooks.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
buildings/: admin.py  models.py  serializers.py  urls.py  views.py
buildings/migrations/: 0001_initial.py
database_routers/: default.py  main.py
infections/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
infections/migrations/: 0001_initial.py  0002_alter_notifications_infection.py  0003_remove_notifications_id_and_more.py  0004_remove_infectionhistory_has_uploaded.py
tracer_backend/: settings.py  urls.py
